<resources>
    <string name="app_name">godjunpyo_recent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Group Names -->
    <string name="group_home">소개</string>
    <string name="group_board">게시판</string>
    <string name="group_mechanics">역학 콘서트/전공</string>
    <string name="group_external">외부 소스</string>

    <!-- Fragment Names -->
    <string name="menu_home">갓준표 소개</string>
    <string name="menu_board">갓준표 게시판</string>
    <string name="menu_normal_mentoring">일반 멘토링</string>
    <string name="menu_prof_mentoring">교수님 멘토링</string>
    <string name="menu_see_all">한번에 보기</string>
    <string name="menu_solid">고체역학</string>
    <string name="menu_eng_math">공업수학</string>
    <string name="menu_material">공학재료학</string>
    <string name="menu_dynamics">동역학</string>
    <string name="menu_thermo">열역학</string>
    <string name="menu_transfer">열전달</string>
    <string name="menu_fluid">유체역학</string>
    <string name="menu_auto_control">자동제어</string>
    <string name="menu_material_behavior">재료거동학</string>
    <string name="menu_statics">정역학</string>
    <string name="menu_vibration">진동학</string>
    <string name="menu_coding">코딩</string>
    <string name="menu_youtube">유튜브</string>
    <string name="menu_webpage">웹페이지</string>

    <!-- PopUp Usage -->
    <string name="popup_title">사용 방법</string>
    <string name="popup_content_1">왼쪽 상단의 메뉴 버튼을 누르시면, 갓준표의 주요 기능들이 정리되어 있습니다.</string>
    <string name="popup_content_2">기본적인 기능들은 갓준표 홈페이지와 연결되어 있습니다.</string>
    <string name="popup_content_3">일반 멘토링 기능은 최근 1~2주 내의 멘토링 영상이 보이며 자동 업데이트됩니다.</string>
    <string name="popup_content_4">외부 소스를 통해 유튜브앱과 브라우저를 통해 직접 갓준표를 열 수 있습니다.</string>
</resources>